--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
-  "name": "web",
+  "name": "loan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.9.3",
+    "babel-plugin-import": "^1.9.1",
     "react": "^16.5.2",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^2.0.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-hot-loader": "^4.3.11",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.0.0-next.2150693d",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0"
+  },
+  "browserslist": [
+    ">0.25%",
+    "not op_mini all",
+    "ie 11"
+  ]
 }
