--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "browser": true
   },
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/destructuring-assignment": 0
   }
 }
