--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.9.3",
     "babel-plugin-import": "^1.9.1",
+    "date-fns": "^1.29.0",
     "react": "^16.5.2",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^2.0.0",
@@ -24,6 +25,7 @@
     "eject": "react-app-rewired eject"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
