add action test

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,14 @@
     "browser": true
   },
   "parser": "babel-eslint",
+  "overrides": [
+    {
+      "files": ["**/*.test.js"],
+      "env": {
+        "jest": true
+      }
+    }
+  ],
   "rules": {
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
