--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "redux-mock-store": "^1.5.3"
   },
   "browserslist": [
     ">0.25%",
