--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   "parser": "babel-eslint",
   "overrides": [
     {
-      "files": ["**/*.test.js"],
+      "files": ["**/*.test.js?"],
       "env": {
         "jest": true
       }
