--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.9.3",
+    "antd": "3.8.4",
     "babel-plugin-import": "^1.9.1",
     "date-fns": "^1.29.0",
     "react": "^16.5.2",
